syntax = "proto3";

package api.tokenlist.v1;

import "google/api/annotations.proto";

option go_package = "node-proxy/api/tokenlist/v1;v1";
option java_multiple_files = true;
option java_package = "api.tokenlist.v1";

service Tokenlsit {
    rpc GetPrice (PriceReq) returns (PriceResp) {
        option (google.api.http) = {
            get: "/tokenlist/price"
        };
    }

    rpc CreateTokenList (CreateTokenListReq) returns (CreateTokenListResp) {
        option (google.api.http) = {
            post: "/tokenlist",
            body: "*"
        };
    }

    rpc GetTokenList (GetTokenListReq) returns (GetTokenListResp) {
        option (google.api.http) = {
            get: "/tokenlist"
        };
    };
}

message GetTokenListReq {
    string chain = 1;
}

message GetTokenListResp {
    message Data {
        uint32 chainId = 1;
        string name = 2;
        string address = 3;
        uint32 decimals = 4;
        string symbol = 5;
        string logoURI = 6;
    }
    repeated Data data = 1;
}

message CreateTokenListReq {}
message CreateTokenListResp {
    string message = 1;
}

message PriceReq {
    string coin_names = 1;
    string coin_addresses = 2;
    string currency = 3;
}

message PriceResp {
    bytes data = 1;
}
